--- a/trunk/user/util-linux/Makefile
+++ b/trunk/user/util-linux/Makefile
@@ -1,5 +1,6 @@
-SRC_NAME=util-linux-2.39.3
-SRC_URL=https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.39/$(SRC_NAME).tar.xz
+SRC_NAME=util-linux-2.33.1
+SRC_URL=https://www.kernel.org/pub/linux/utils/util-linux/v2.33/util-linux-2.33.1.tar.xz
+
 THISDIR = $(shell pwd)
 
 CFLAGS += -ffunction-sections -fdata-sections
@@ -29,7 +30,6 @@ config_test:
 
 configure:
 	( cd $(SRC_NAME) ; \
-	./autogen.sh ; \
 	PKG_CONFIG_PATH=$(STAGEDIR)/lib/pkgconfig \
 	scanf_cv_type_modifier=no \
 	./configure \
