--- a/trunk/user/smartdns/Makefile
+++ b/trunk/user/smartdns/Makefile
@@ -31,11 +31,11 @@ clean:
 	rm -f config_done
 
 romfs:
-#	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/src/smartdns /usr/bin/smartdns
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/src/smartdns /usr/bin/smartdns
 	$(ROMFSINST) -p +x $(THISDIR)/smartdns.sh /usr/bin/smartdns.sh
 	$(ROMFSINST) /etc_ro/smartdns_address.conf
 	$(ROMFSINST) /etc_ro/smartdns_blacklist-ip.conf
 	$(ROMFSINST) /etc_ro/smartdns_custom.conf
 	$(ROMFSINST) /etc_ro/smartdns_whitelist-ip.conf
-	chmod +x $(THISDIR)/$(SRC_NAME)/src/smartdns
-	mv $(THISDIR)/$(SRC_NAME)/src/smartdns /opt/images/
+#	chmod +x $(THISDIR)/$(SRC_NAME)/src/smartdns
+#	mv $(THISDIR)/$(SRC_NAME)/src/smartdns /opt/images/
