--- a/trunk/user/shadowsocks/Makefile
+++ b/trunk/user/shadowsocks/Makefile
@@ -22,8 +22,6 @@ endif
 extract_ssr_test:
 	( if [ ! -d $(SRC_SSR_NAME) ]; then \
 		unzip -qq $(ARCHIVE_SSR_NAME).zip ; \
-		cd $(SRC_SSR_NAME); \
-		patch -p1 < ../shadowsocksr-libev-master-e2373d7.diff; \
 	fi )
 
 extract_ss_test:
@@ -53,7 +51,6 @@ config_ssr:
 
 configure_ssr:
 	( cd $(SRC_SSR_NAME) ; \
-	aclocal -I m4; autoreconf -fi; automake -a --copy; \
 	ac_cv_prog_PCRE_CONFIG="$(STAGEDIR)/bin/pcre-config" \
 	./configure \
 		--prefix=/usr \
@@ -61,7 +58,7 @@ configure_ssr:
 		--disable-ssp \
 		--disable-assert \
 		--enable-system-shared-lib \
-		--with-crypto-library=mbedtls \
+		--with-crypto-library=openssl \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
@@ -80,6 +77,7 @@ configure_ss:
 
 clean: clean_ssr clean_ss
 	rm -f ssr_config_done ss_config_done
+	#rm -rf $(GFWLIST_DIR)
 
 clean_ssr:
 	( if [ -f $(SRC_SSR_NAME)/Makefile ] ; then \
@@ -95,26 +93,26 @@ romfs:
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
 	chmod -R +x scripts/
 	$(ROMFSINST) $(THISDIR)/scripts/ /usr/bin/
+	#$(ROMFSINST) $(THISDIR)/gfwlist/gfwlist.bz2 /etc_ro/gfwlist.bz2
 	$(ROMFSINST) $(THISDIR)/oversea/oversea_list.conf /etc_ro/oversea_list.conf
 	$(ROMFSINST) $(THISDIR)/gfwlist/gfwlist_list.conf /etc_ro/gfwlist_list.conf
 	$(ROMFSINST) /etc_ro/ss_dom.sh
 	$(ROMFSINST) /etc_ro/uss_dom.sh
 	$(ROMFSINST) /etc_ro/ss_ip.sh
 	$(ROMFSINST) /etc_ro/ss_lan_bip.sh
-	$(ROMFSINST) /etc_ro/ss_lan_gmip.sh
 	$(ROMFSINST) /etc_ro/ss_lan_ip.sh
 	$(ROMFSINST) /etc_ro/ss_wan_ip.sh
 	$(ROMFSINST) /etc_ro/ss_dlink.sh
+	#$(ROMFSINST) /etc_ro/dlink.js
 	$(ROMFSINST) $(THISDIR)/ss/ /etc_ro/ss/
-	$(STRIP) $(THISDIR)/$(SRC_SSR_NAME)/src/ss-redir
-	$(STRIP) $(THISDIR)/$(SRC_SSR_NAME)/src/ss-local
 	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_SSR_NAME)/src/ss-redir /usr/bin/ssr-redir
 	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_SSR_NAME)/src/ss-local /usr/bin/ssr-local
-	$(STRIP) $(THISDIR)/$(SRC_SS_NAME)/src/ss-redir
-	$(STRIP) $(THISDIR)/$(SRC_SS_NAME)/src/ss-local
 	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_SS_NAME)/src/ss-redir /usr/bin/ss-redir
+	#$(ROMFSINST) -p +x $(THISDIR)/$(SRC_SS_NAME)/src/ss-tunnel /usr/bin/ss-tunne
 	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_SS_NAME)/src/ss-local /usr/bin/ss-local
-	$(ROMFSINST) -p +x $(THISDIR)/scripts/ss-check /usr/bin/ss-check
+	$(ROMFSINST) -p +x $(THISDIR)/scripts/ss-check /usr/bin/ss-check 
+	#ln -sf /var/ss-redir $(ROMFSDIR)/usr/bin/ss-redir
+	#ln -sf /var/ss-tunnel $(ROMFSDIR)/usr/bin/ss-local
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSSERVER),y)
 	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_SS_NAME)/src/ss-server /usr/bin/ss-server
