--- a/trunk/user/adguardhome/Makefile
+++ b/trunk/user/adguardhome/Makefile
@@ -1,3 +1,5 @@
+#download AdGuardHome Binary File to path /opt/bin/
+#url:https://github.com/AdguardTeam/AdGuardHome/releases/tag/v0.107.59
 THISDIR = $(shell pwd)
 all:
 
