--- a/trunk/user/adguardhome/Makefile
+++ b/trunk/user/adguardhome/Makefile
@@ -6,4 +6,4 @@ all:
 clean:
 
 romfs:
-	$(ROMFSINST) -p +x $(THISDIR)/adguardhome.sh /usr/bin/adguardhome.sh
+	$(ROMFSINST) -p +x $(THISDIR)/adguardhome.sh /etc/storage/adguardhome.sh
