--- a/.github/workflows/Padavan-user-R3G.yml
+++ b/.github/workflows/Padavan-user-R3G.yml
@@ -1,11 +1,11 @@
 #修改TNAME: K2P 中的K2P为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
 name: Padavan-user-R3G
 on: 
-  release:
-    types: [published]
-  push:
-    tags:
-    - 'v*'
+#  release:
+#    types: [published]
+#  push:
+#    tags:
+#    - 'v*'
   #  branches: 
   #    - master
 #  schedule:
