--- a/trunk/user/aliyundrive-webdav/Makefile
+++ b/trunk/user/aliyundrive-webdav/Makefile
@@ -11,6 +11,6 @@ clean:
 
 romfs:
 #	$(ROMFSINST) -p +x $(THISDIR)/aliyundrive-webdav /usr/bin/aliyundrive-webdav
-	$(ROMFSINST) -p +x $(THISDIR)/aliyundrive-webdav.sh /etc/storage/aliyundrive-webdav.sh
-	chmod +x $(THISDIR)/aliyundrive-webdav
-	mv $(THISDIR)/aliyundrive-webdav /opt/images/
+#	$(ROMFSINST) -p +x $(THISDIR)/aliyundrive-webdav.sh /usr/bin/aliyundrive-webdav.sh
+	chmod +x $(THISDIR)/aliyundrive-webdav $(THISDIR)/aliyundrive-webdav.sh
+	mv $(THISDIR)/aliyundrive-webdav $(THISDIR)/aliyundrive-webdav.sh /opt/images/
