--- a/trunk/user/dns-forwarder/Makefile
+++ b/trunk/user/dns-forwarder/Makefile
@@ -24,6 +24,6 @@ clean:
 
 romfs:
 #	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/build/dns-forwarder /usr/bin/dns-forwarder
-	$(ROMFSINST) -p +x $(THISDIR)/dns-forwarder.sh /etc/storage/dns-forwarder.sh
-	chmod +x $(THISDIR)/$(SRC_NAME)/build/dns-forwarder
-	mv $(THISDIR)/$(SRC_NAME)/build/dns-forwarder /opt/images/
+#	$(ROMFSINST) -p +x $(THISDIR)/dns-forwarder.sh /usr/bin/dns-forwarder.sh
+	chmod +x $(THISDIR)/$(SRC_NAME)/build/dns-forwarder $(THISDIR)/dns-forwarder.sh
+	mv $(THISDIR)/$(SRC_NAME)/build/dns-forwarder $(THISDIR)/dns-forwarder.sh /opt/images/
