--- a/trunk/user/smartdns/smartdns_custom.conf
+++ b/trunk/user/smartdns/smartdns_custom.conf
@@ -59,7 +59,7 @@
 #    bind [::]:53
 #    bind [::]:53@eth0
 #    bind-tcp [::]:53
-bind [::]:53
+#bind [::]:53
 
 # tcp connection idle timeout
 # tcp-idle-time [second]
@@ -133,7 +133,7 @@ bind [::]:53
 # force-qtype-SOA 65-68 add type 65-68
 # force-qtype-SOA -,65-68, clear type 65-68
 # force-qtype-SOA - clear all type
-force-qtype-SOA 65
+#force-qtype-SOA 65
 
 # Enable IPV4, IPV6 dual stack IP optimization selection strategy
 # dualstack-ip-selection-threshold [num] (0~1000)
@@ -175,7 +175,7 @@ force-qtype-SOA 65
 # log-syslog [yes|no]: output log to syslog.
 # log-size: size of each log file, support k,m,g
 # log-num: number of logs, 0 means disable log
-log-level info
+#log-level info
 
 # log-file /var/log/smartdns/smartdns.log
 # log-size 128k
@@ -420,12 +420,12 @@ log-level info
 ### 在smartdns.conf配置文件中，包含配置如下即可提供服务并对DNS查询加速：
 ###
 # 监听53端口
-bind [::]:53
+#bind [::]:53
 # 配置上游服务器
-server 8.8.8.8
-server 114.114.114.114
-server 202.96.128.166:53
-server-tls 1.1.1.1
+#server 8.8.8.8
+#server 114.114.114.114
+#server 202.96.128.166:53
+#server-tls 1.1.1.1
 
 ###设置cache定时保存
-cache-checkpoint-time 86400
+#cache-checkpoint-time 86400
