--- a/.github/workflows/Padavan-single-APP.yml
+++ b/.github/workflows/Padavan-single-APP.yml
@@ -6,7 +6,7 @@ on:
     tags:
     - 'v*'
     branches: 
-      - single-APP---
+      - single-APP
 #  schedule:
 #    - cron: 0 8 * * 5
   watch:
@@ -107,8 +107,8 @@ jobs:
         echo "CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y" >> .config ###TRANSMISSION 下载器
         echo "CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y" >> .config ###TRANSMISSION 下载器web管理
         echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config #SS plus+
-        echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=y" >> .config #集成v2ray执行文件（3.8M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
-        echo "CONFIG_FIRMWARE_INCLUDE_TROJAN=y" >> .config #集成trojan执行文件(1.1M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
+        echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=y" >> .config #集成v2ray执行文件（3.8M左右)
+        echo "CONFIG_FIRMWARE_INCLUDE_TROJAN=y" >> .config #集成trojan执行文件(1.1M左右)
         echo "CONFIG_FIRMWARE_INCLUDE_XRAY=y" >> .config
         echo "CONFIG_FIRMWARE_INCLUDE_ALDRIVER=y" >> .config
         echo "CONFIG_FIRMWARE_INCLUDE_DDNSTO=y" >> .config
@@ -128,5 +128,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: Padavan-user-R3G-minidlna-filebrowser-transmission-smartdns-aliddns-zerotier-SSR-v2ray-trojan-xray-dnsforwarder-adbyby-adguardhome-aldriver-ddnsto_2025_04_12
+        name: Padavan-user-R3G-minidlna-filebrowser-transmission-smartdns-aliddns-zerotier-SSR-v2ray-trojan-xray-dnsforwarder-adbyby-adguardhome-aldriver-ddnsto_2025_05_05
         path: /opt/images
