--- a/.github/workflows/Padavan-user-B70.yml
+++ b/.github/workflows/Padavan-user-B70.yml
@@ -53,7 +53,7 @@ jobs:
         fi
         cp -f configs/templates/$TNAME.config .config
         sed -i 's/CONFIG_FIRMWARE_PRODUCT_ID/CONFIG_FIRMWARE_PRODUCT_NewID/g' ./user/www/Makefile
-        echo "CONFIG_FIRMWARE_PRODUCT_NewID=\"Xiaomi R3G\"" >> .config #更改管理页面标题
+        echo "CONFIG_FIRMWARE_PRODUCT_NewID=\"B70\"" >> .config #更改管理页面标题
         sed -i 's/20240909/'$(date +'%Y%m%d')'/g' ./versions.inc
         ################################################################################################
         #因不同型号配置功能不一样，所以先把配置项删除，如果你自己要添加其他的，也要写上删除这一条，切记！！！
